feat: exportar proceso
